force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__ActionPlan_TargetId_map_Campaign_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActionPlan_TargetId_map_Campaign_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlan_TargetId_map_Campaign_Id_N_1</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>ActionPlan_TargetId_map_Campaign_Id_N_1</relationshipLabel>
    <relationshipName>ActionPlan_TargetId_map_Campaign_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>