force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__ActualEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualEndDate__c</fullName>
    <label>Actual End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>