force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__ActualStartDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActualStartDate__c</fullName>
    <label>Actual Start Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActualStartDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>