force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__IsUsingHolidayHours__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsUsingHolidayHours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Using Holiday Hours</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsUsingHolidayHours</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>