force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__RecordCreationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecordCreationType__c</fullName>
    <label>Record Creation Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecordCreationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>