force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__rel_1719818171089_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818171089_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlan_ActionPlanTemplateVersion_rel</label>
    <referenceTo>ssot__ActionPlanTemplateVersion__dlm</referenceTo>
    <relationshipLabel>ActionPlan_ActionPlanTemplateVersion_rel</relationshipLabel>
    <relationshipName>rel_1719818171089_end</relationshipName>
    <type>Lookup</type>
</CustomField>