force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__rel_1719818622270_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818622270_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ActionPlan_TargetId_map_ApplicationD_rel</label>
    <referenceTo>ssot__ApplicationDecision__dlm</referenceTo>
    <relationshipLabel>ActionPlan_TargetId_map_ApplicationD_rel</relationshipLabel>
    <relationshipName>rel_1719818622270_end</relationshipName>
    <type>Lookup</type>
</CustomField>