force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__ScheduleFrequencyText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScheduleFrequencyText__c</fullName>
    <label>Schedule Frequency</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScheduleFrequencyText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>