force-app/main/default/objects/ssot__ActionPlan__dlm/fields/ssot__TargetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TargetId__c</fullName>
    <label>Target</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TargetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>